--- a/css/main.css
+++ b/css/main.css
@@ -123,8 +123,28 @@ button {
 /* ==========================================================================
    #PAGE WRAPPER
    ========================================================================== */
-.page-wrapper {
-  min-height: 80vh;
+/*
+   .page-wrapper {
+  min-height: 45vh;
+}
+*/
+
+.submit-state {
+  /* Height & width depends on how you want to reveal the overlay (see JS below) */
+  height: 0;
+  width: 100%;
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  bottom: 0;
+  background-color: rgb(77, 174, 60);
+  /* Black w/opacity */
+  overflow-x: hidden;
+  /* Disable horizontal scroll */
+  transition: 0.5s;
+  /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
 }
 
 body {
@@ -501,6 +521,7 @@ textarea {
   -moz-box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
   box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.15);
   width: 100%;
+  scale: 0.8;
   display: table;
 }
 
